feat: layout chat

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -12,7 +12,115 @@
         </div>
       </div>
       <div class="dialog-wrapper">
-        <div class="dialog-window"></div>
+        <div class="dialog-window">
+          <div class="dialog-content">
+            <ul class="message-unolist">
+              <li>
+                <div class="message-date-wrapper">
+                  <div class="message-date">10:14 AM, Today</div>
+                </div>
+                <div class="message-text">
+                  ctetur adipisicing quastae consequatur dignissimos esse
+                  explicabo in, non, inventore harum! Impedit voluptate
+                  reprehenderit maiores ex. Sint facilis vero aliquid.
+                </div>
+              </li>
+              <li>
+                <div class="message-date-wrapper">
+                  <div class="message-date">10:14 AM, Today</div>
+                </div>
+                <div class="message-text">
+                  ctetur adipisicing quastae consequatur dignissimos esse
+                  explicabo in, non, inventore harum! Impedit voluptate
+                  reprehenderit maiores ex. Sint facilis vero aliquid.
+                </div>
+              </li>
+              <li>
+                <div class="message-date-wrapper">
+                  <div class="message-date">10:14 AM, Today</div>
+                </div>
+                <div class="message-text">
+                  ctetur adipisicing quastae consequatur dignissimos esse
+                  explicabo in, non, inventore harum! Impedit voluptate
+                  reprehenderit maiores ex. Sint facilis vero aliquid.
+                </div>
+              </li>
+              <li>
+                <div class="message-date-wrapper">
+                  <div class="message-date">10:14 AM, Today</div>
+                </div>
+                <div class="message-text">
+                  ctetur adipisicing quastae consequatur dignissimos esse
+                  explicabo in, non, inventore harum! Impedit voluptate
+                  reprehenderit maiores ex. Sint facilis vero aliquid.
+                </div>
+              </li>
+              <li>
+                <div class="message-date-wrapper">
+                  <div class="message-date">10:14 AM, Today</div>
+                </div>
+                <div class="message-text">
+                  ctetur adipisicing quastae consequatur dignissimos esse
+                  explicabo in, non, inventore harum! Impedit voluptate
+                  reprehenderit maiores ex. Sint facilis vero aliquid.
+                </div>
+              </li>
+              <li>
+                <div class="message-date-wrapper">
+                  <div class="message-date">10:14 AM, Today</div>
+                </div>
+                <div class="message-text">
+                  ctetur adipisicing quastae consequatur dignissimos esse
+                  explicabo in, non, inventore harum! Impedit voluptate
+                  reprehenderit maiores ex. Sint facilis vero aliquid.
+                </div>
+              </li>
+              <li>
+                <div class="message-date-wrapper">
+                  <div class="message-date">10:14 AM, Today</div>
+                </div>
+                <div class="message-text">
+                  ctetur adipisicing quastae consequatur dignissimos esse
+                  explicabo in, non, inventore harum! Impedit voluptate
+                  reprehenderit maiores ex. Sint facilis vero aliquid.
+                </div>
+              </li>
+              <!-- here is start -->
+              <li>
+                <div class="robox-avatar-wrapper">
+                  <div class="robox-avatar">
+                    <img
+                      class="robox-img"
+                      src="../../../assets/pics/asker.svg"
+                      alt="asker"
+                      srcset=""
+                    />
+                  </div>
+                </div>
+                <div class="message-text-wrapper">
+                  <p class="message-text">
+                    ctetur adipisicing quastae consequatur dignissimos esse
+                    explicabo in, non, inventore harum! Impedit voluptate
+                    reprehenderit maiores ex. Sint facilis vero aliquid.
+                  </p>
+                </div>
+                <div class="message-date-wrapper">
+                  <div class="message-date">10:14 AM, Today</div>
+                </div>
+              </li>
+              <li>
+                <div class="message-date-wrapper">
+                  <div class="message-date">10:14 AM, Today</div>
+                </div>
+                <div class="message-text">
+                  ctetur adipisicing quastae consequatur dignissimos esse
+                  explicabo in, non, inventore harum! Impedit voluptate
+                  reprehenderit maiores ex. Sint facilis vero aliquid.
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
