--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-@import './normalize';
-@import '../app/components/main/main.component.scss';
+/* import other style files */
+@import "./normalize";
+@import "./mixin";
+@import "../app/app.component.scss";  // global styles
+@import "../app/components/main/main.component.scss";
+@import "../app/components/chat/chat.component.scss";
