--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -2,10 +2,51 @@
 @import '../../../scss/colors';
 @import '../../../scss/variables';
 
-// robot avatar
-.robot-avatar-wrapper {
+
+// dialog: right half
+.dialog {
+  @include dp-center;
+  width: 100%;
+  height: 100%;
 }
 
+.dialog-wrapper {
+  @include dp-center;
+  justify-content: flex-start;
+  height: 100%;
+}
+
+.dialog-window {
+  @include dp-center;
+  align-items: initial;
+  width: 80%;
+  height: 80%;
+  overflow: auto;
+  background-color: $chat-window-color;
+  border-radius: 2rem;
+}
+
+// scrollbar setting
+div.dialog-window::-webkit-scrollbar {
+  width: 12px;
+}
+
+div.dialog-window::-webkit-scrollbar-track {
+  background: $scroll-bg-color;
+  border-radius: 20px;
+}
+
+div.dialog-window::-webkit-scrollbar-thumb {
+  background-color: $bg-color;
+  border-radius: 20px;
+  border: 2px solid $scroll-bg-color;
+}
+
+.dialog-content {
+  max-width: 80%;
+}
+
+// robot avatar
 .robot-avatar {
   width: $avatar-bg-width;
   height: $avatar-bg-width;
@@ -22,12 +63,62 @@
   border-radius: 20px;
 }
 
+// suspense stituation 覆蓋寫css
+.suspense.robot-avatar {
+  background-color: unset;
+}
+
+.suspense.message-robot-side {
+  @include dp-center;
+  height: max-content;
+}
+
+.suspense.message-date {
+  color: $chat-window-color;
+}
+.suspense.message-robot-side > p {
+  background-color: $chat-window-color;
+  color: $chat-window-color;
+}
+// 對話三角箭頭
+div.suspense.message-robot-side::after {
+  border-bottom-color: $chat-window-color;
+}
+
+// loading animation
+.tide {
+  width: 5px;
+  height: 10px;
+  background: linear-gradient(45deg, #229e6c, #64a8a6);
+  margin: 10px;
+  animation: tide_animate 1s linear infinite;
+  border-radius: 20px;
+}
+
+@for $i from 1 through 10{
+  .tide:nth-child(#{$i}){
+    animation-delay: ($i - 1) * 0.1s;
+  }
+}
+
+@keyframes tide_animate {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
 // messages
 .message-unolist {
   vertical-align: bottom;
+  list-style-type: none;
 }
 .message-unolist > li {
-  display: inline-block;
   text-align: left;
 }
 
@@ -59,8 +150,10 @@
 }
 
 // robot為主體的談話
-.message-robot-side {
+.message-robot-side > p{
+  width: fit-content;
   background-color: $chat-bg-color;
+  border-radius: $msg-text-border-radius;
 }
 
 .message-robot-side.message-text-wrapper::after {
@@ -70,16 +163,28 @@
 }
 
 // 使用者為主體的談話
-.message-client-side > p{
+.message-client-side{
+  display: flex;
+  justify-content: right;
+}
+
+.message-client-side >p{
     border-radius: $msg-text-border-radius;
     box-shadow: $msg-client-shadow-color 2px 3px 4px 0px;
+    color: $chat-bg-color;
 }
 
 .message-client-side.message-text-wrapper::after{
-    right: -3.0%;
+    top: 19px;
+    right: -17px;
     border-bottom-color: $chat-window-color;
     filter: drop-shadow(6px -2px 3px $msg-client-shadow-color);
     transform: rotate(90deg);
+}
+
+.message-text-zone{
+  display: flex;
+  justify-content: center;
 }
 
 .message-date.message-date-client{
@@ -88,12 +193,9 @@
     text-align: right;
 }
 
-.message-client-side > p{
-    color: $chat-bg-color;
-}
-
 .ans-li{
-    width: 100%
+    width: 100%;
+    padding-bottom: 15px;
 }
 
 .ans-wrapper {
